# GlycoAudit

./: .gitignore  CITATION.cff  CRITICAL_FIXES_NEEDED.md  LICENSE  PRE_PUSH_CHECKLIST.md  README.md  REPOSITORY_STRUCTURE.txt  environment.yml  pyproject.toml  requirements.txt
benchmark_results/: PROVENANCE.md  README.md  benchmark_summary.csv  benchmark_summary.json
benchmark_results/E1_ensemble_sensitivity/: per_glycan_feature.csv  provenance_rules.json  summary.csv
benchmark_results/E1_ensemble_sensitivity_v2/: metadata.json  per_glycan_feature.csv  provenance_rules.json  summary.csv
benchmark_results/E2_pu_ranking/: aggregate_metrics.csv  null_distributions.csv  pvalues.json
benchmark_results/E4_runtime_scaling/: hardware.json  runtime_table.csv
benchmark_results/E5_split_robustness/: agent_holdout_metrics.csv  scaffold_split_metrics.csv
benchmark_results/E5_split_robustness_v2/: metadata.json  pvalues.json  scaffold_rules.json  scaffold_split_aggregate.csv  scaffold_split_null_by_fold.csv  scaffold_split_observed_by_fold.csv
benchmark_results/E6_size_control/: residualized_vs_full.csv  size_matched_null.csv  size_strata_metrics.csv  summary.json
benchmark_results/case_studies/: case_studies_summary.json  case_studies_table.csv  case_study_AB_CB.json  case_study_CG_GL_000782.json  enriched_case_study_1.json  enriched_case_study_2.json  enriched_case_study_3.json  enriched_summary_table.csv  manuscript_text_case_studies.tex  manuscript_text_enriched.tex
configs/: mirror.yaml
data/: README.md
data/manifests/: glycoshape.csv  glygen.csv  (+4 more)
docs/: quickstart.md
scripts/: SCRIPTS_TO_COPY.txt
(+65 files in other folders)
