[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-glyco-mirror"
version = "1.0.0"
description = "Reproducible public glyco data mirror with categorized sources"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Glyco Mirror Team"}
]
keywords = ["glycomics", "bioinformatics", "data-mirror", "glytoucan", "glycoshape"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tenacity>=8.2.0",
    "aiofiles>=23.0.0",
    "aiolimiter>=1.1.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sparqlwrapper>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
glyco-mirror = "mirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
